--- a/pom.xml
+++ b/pom.xml
@@ -17,10 +17,19 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
-		</dependency><!-- für das Praktikum "Integrationstest" --><!-- dependency> <groupId>org.easymock</groupId> <artifactId>easymock</artifactId> 
-			<version>3.6</version> <scope>test</scope> </dependency> <dependency> <groupId>org.hamcrest</groupId> 
-			<artifactId>hamcrest-library</artifactId> <version>1.3</version> <scope>test</scope> 
-			</dependency -->
+		</dependency><!-- für das Praktikum "Integrationstest" -->
+		<dependency>
+			<groupId>org.easymock</groupId>
+			<artifactId>easymock</artifactId>
+			<version>3.6</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hamcrest</groupId>
+			<artifactId>hamcrest-library</artifactId>
+			<version>1.3</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
@@ -50,10 +59,26 @@
 						</manifest>
 					</archive>
 				</configuration>
-			</plugin><!-- für das Praktikum "Integrationstest" --><!-- plugin> <groupId>org.jacoco</groupId> <artifactId>jacoco-maven-plugin</artifactId> 
-				<version>0.8.2</version> <executions> <execution> <id>default-prepare-agent</id> 
-				<goals> <goal>prepare-agent</goal> </goals> </execution> <execution> <id>default-report</id> 
-				<goals> <goal>report</goal> </goals> </execution> </executions> </plugin -->
+			</plugin><!-- für das Praktikum "Integrationstest" -->
+			<plugin>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
+				<version>0.8.2</version>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>default-report</id>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
 				defaults (may be moved to parent pom) -->
